[gd_scene load_steps=2 format=2]

[ext_resource path="res://gameplay/data_filters/data_filters.gd" type="Script" id=1]

[node name="data_filters" type="Node2D"]
script = ExtResource( 1 )

[node name="gui" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0

[node name="creation_button" type="Button" parent="gui"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 1052.0
margin_right = 65.0
margin_bottom = 1072.0
text = "CREATE"

[connection signal="button_down" from="gui/creation_button" to="." method="_on_creation_button_button_down"]
